--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+      CHANGES IN sysfonts VERSION 0.2
+
+NEW FEATURES
+
+    o Now can add font from Google Fonts. 
+
+
+
+
+
       CHANGES IN sysfonts VERSION 0.1
 
 NEW FEATURES
