--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+      CHANGES IN sysfonts VERSION 0.5
+
+BUG FIXES
+
+    o More robust way to fetch font list.
+
+
+
+
+
       CHANGES IN sysfonts VERSION 0.4
 
 BUG FIXES
