--- a/inst/AUTHORS
+++ b/inst/AUTHORS
@@ -1,4 +1,4 @@
-The Liberation Fonts included in the fonts/ subdirectory are developed by
+The Liberation Fonts included in the fonts/ subdirectory were developed by
   Caius Chance
   Denis Jacquerye
   Herbert Duerr
@@ -6,5 +6,4 @@ The Liberation Fonts included in the fonts/ subdirectory are developed by
   Steve Matteson
   Mark Webbink
 
-Other part of this package is written by Yixuan Qiu.
-
+Other part of this package was written by Yixuan Qiu.
